--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.3",
+    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.5",
+    "@types/node": "^13.11.1",
+    "express": "^4.17.1"
   }
 }
